# LoxTreeWalkInterpreter

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  test.sh
.github/workflows/: cmake.yml
codegen/: generate_ast.py
config/: CMakeLists.txt  config.h  config.h.in
expression/: CMakeLists.txt
expression/include/: binary.h  expr.h  expression_visitor.h  grouping.h  literal.h  printer_visitor.h  unary.h
expression/src/: expr.cpp  printer_visitor.cpp
include/interpreter/: file.h  interpreter.h  token.h  token_type.h  tokenizer.h
interpreter/: CMakeLists.txt
interpreter/include/: environment.h  interpreter.h  lox_callable.h  lox_function.h  lox_type.h  native_func.h  return.h  runtime_error.h
interpreter/src/: interpreter.cpp  lox_function.cpp
lox/: CMakeLists.txt
lox/include/: lox.h
lox/src/: lox.cpp
parser/: CMakeLists.txt
parser/include/: parser.h  resolver.h
parser/src/: parser.cpp  resolver.cpp
resource/test/tokenizer/: alltokens.txt
src/: CMakeLists.txt  interpreter.cpp  main.cpp  token.cpp  tokenizer.cpp
statement/: CMakeLists.txt
statement/include/: stmt.h  stmt_visitor.h
statement/src/: stmt.cpp
tokenizer/: CMakeLists.txt  tokenizer_test
tokenizer/include/: token.h  token_type.h  tokenizer.h
tokenizer/src/: token.cpp  tokenizer.cpp
tokenizer/test/: test.cpp
type/: CMakeLists.txt
type/include/: function_type.h  invalid_type_exception.h  lox_callable.h  lox_class.h  lox_function.h  lox_instance.h  lox_type.h
type/src/: lox_class.cpp  lox_function.cpp  lox_instance.cpp  lox_type.cpp
util/: CMakeLists.txt  generate_ast.py
util/src/: file.cpp
